# vixenbliss_creator

./: .coolify.json  .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  MODAL_SDXL_LORA_INTEGRATION.md  MODAL_SUMMARY.md  README.md  SETUP.md  docker-compose.yml  env.example  pyproject.toml  pytest.ini  requirements.txt
.codex/: AGENTS.md  PLANS.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
backend/: .dockerignore  .env.example  .env.example.modal-sdxl-lora  AGENTS.md  Dockerfile  check_module_time.py  inspect_lora.py  pytest.ini  requirements-dev.txt  requirements.txt  run-tests.ps1  run-tests.sh  test_final_report.txt  test_modal_client_local.py  test_output.txt
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  BUGS.md  DOCS_INDEX.md  DOCS_POLICY.md  EPICA_03_IMPLEMENTATION.md  PROJECT_INVENTORY.md  SYSTEM_MAP.md  TASK.md
frontend/: .dockerignore  .env.example  AGENTS.md  Dockerfile  INDUSTRIAL_UI.md  QUICK_START.md  README.md  UX_IMPROVEMENTS.md  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
infra/: README.md
migrations/: 001_initial_relational_persistence.sql
tests/: test_agentic_brain.py  test_comfyui_copilot_bundle.py  test_comfyui_copilot_runtime.py  test_content_contract.py  test_identity_contract.py  test_migrations.py  test_relational_persistence_sql.py  test_runpod_comfyui_bundle.py  test_runpod_s1_image_serverless_bundle.py  test_runpod_s1_image_serverless_handler.py  test_runpod_s1_model_loader_bundle.py  test_runpod_visual_serverless_bundle.py  (+21 more)
(+329 files in other folders)
