[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vixenbliss-creator"
version = "0.1.0"
description = "Canonical contracts and documentation for VixenBliss Creator."
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
